<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/solid_border_transparent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/imageDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/camera" />

            <Button
                android:id="@+id/btnGallery"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginStart="120dp"
                android:background="@drawable/gallery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/plant_name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/plant_type"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addTypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/life_cycle"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addLifeCycleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/plant_sun"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addSunEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/water_req"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addWaterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addTemperatureEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:text="@string/comments"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/addCommentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddPlantToDB"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_border_green"
            android:text="@string/add_plant" />

    </LinearLayout>

</ScrollView>