<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/border" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editPlantSelected"
            android:fontFamily="@font/aclonica"
            android:textSize="24sp"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/editImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:background="@drawable/solid_border_transparent"
                android:contentDescription="@string/imageDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnTakePictureEdit"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/camera"/>
            <Button
                android:id="@+id/btnGalleryEdit"
                android:layout_marginStart="120dp"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:background="@drawable/gallery"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plant_name"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plant_type"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editTypeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/life_cycle"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editLifeCycleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/plant_sun"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editSunEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/water_req"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editWaterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editTemperatureEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:fontFamily="@font/aclonica"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/editCommentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnEditPlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/solid_border_green"
            android:text="Submit Changes"/>
    </LinearLayout>
</ScrollView>