<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="55dp">

            <ImageView
                android:id="@+id/plantImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:background="@drawable/solid_border_transparent"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nameTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/plant_name"
                android:fontFamily="@font/aclonica"
                />
            <TextView
                android:id="@+id/plantNameTextView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_marginStart="10dp"
                android:text=""
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp">
            <TextView
                android:id="@+id/typeTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/plant_type"
                android:fontFamily="@font/aclonica"/>
            <TextView
                android:id="@+id/plantTypeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/lifeCycleTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/life_cycle"
                android:fontFamily="@font/aclonica" />
            <TextView
                android:id="@+id/plantLifeCycleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/sunRequirementsTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/plant_sun"
                android:fontFamily="@font/aclonica"/>
            <TextView
                android:id="@+id/plantSunRequirementsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/waterTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/water_req"
                android:fontFamily="@font/aclonica"/>
            <TextView
                android:id="@+id/plantWaterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/temperature"
                android:fontFamily="@font/aclonica"/>
            <TextView
                android:id="@+id/plantTemperatureTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/commentsTextView"
                android:layout_height="wrap_content"
                android:layout_width="130dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/comments"
                android:fontFamily="@font/aclonica"/>
            <TextView
                android:id="@+id/plantCommentsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
        android:id="@+id/btnEditPlantInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Edit Plant"
        android:fontFamily="@font/aclonica"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/solid_border_yellow"/>

        <Button
            android:id="@+id/btnDeletePlant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete Plant"
            android:fontFamily="@font/aclonica"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/solid_border_blue"/>

    </LinearLayout>

</ScrollView>